--- a/addons/sale_management/views/sale_portal_templates.xml
+++ b/addons/sale_management/views/sale_portal_templates.xml
@@ -75,22 +75,18 @@
             <t t-if="sale_order.state in ['draft', 'sent'] and line.sale_order_option_ids">
                 <div class="input-group js_quantity_container pull-right">
 
-                    <div class="input-group-prepend d-print-none">
-                        <span class="input-group-text d-none d-md-inline-block">
-                            <a t-att-data-line-id="line.id" t-att-data-remove="True" href="#" class="js_update_line_json" aria-label="Remove one" title="Remove one">
-                                <span class="fa fa-minus"/>
-                            </a>
-                        </span>
-                    </div>
+                    <span class="d-print-none input-group-text d-none d-md-inline-block">
+                        <a t-att-data-line-id="line.id" t-att-data-remove="True" href="#" class="js_update_line_json" aria-label="Remove one" title="Remove one">
+                            <span class="fa fa-minus"/>
+                        </a>
+                    </span>
                     <!-- TODO add uom in this case too -->
                     <input type="text" class="js_quantity form-control" t-att-data-line-id="line.id" t-att-value="line.product_uom_qty"/>
-                    <div class="input-group-append d-print-none">
-                        <span class="input-group-text d-none d-md-inline-block">
-                            <a t-att-data-line-id="line.id" href="#" class="js_update_line_json" aria-label="Add one" title="Add one">
-                                <span class="fa fa-plus"/>
-                            </a>
-                        </span>
-                    </div>
+                    <span class="d-print-none input-group-text d-none d-md-inline-block">
+                        <a t-att-data-line-id="line.id" href="#" class="js_update_line_json" aria-label="Add one" title="Add one">
+                            <span class="fa fa-plus"/>
+                        </a>
+                    </span>
                 </div>
             </t>
             <t t-else="">
