--- a/addons/website_crm_partner_assign/views/website_crm_partner_assign_templates.xml
+++ b/addons/website_crm_partner_assign/views/website_crm_partner_assign_templates.xml
@@ -624,9 +624,7 @@
                                                 <div class="form-row align-items-center">
                                                     <div class="col-auto flex-grow-1">
                                                         <div class="input-group">
-                                                            <div class="input-group-prepend">
-                                                                <div class="input-group-text"><span class="text-nowrap" t-esc="opportunity.company_currency.symbol"/></div>
-                                                            </div>
+                                                            <div class="input-group-text"><span class="text-nowrap" t-esc="opportunity.company_currency.symbol"/></div>
                                                             <input type="text" name="expected_revenue" class="form-control expected_revenue" t-att-value="opportunity.expected_revenue" placeholder="Planned Revenue"/>
                                                         </div>
                                                     </div>
@@ -634,9 +632,7 @@
                                                     <div class="col-auto">
                                                         <div class="input-group">
                                                             <input type="text" name="probability" class="form-control probability" t-att-value="opportunity.probability" placeholder="Probability"/>
-                                                            <div class="input-group-append">
-                                                                <div class="input-group-text">%</div>
-                                                            </div>
+                                                            <div class="input-group-text">%</div>
                                                         </div>
                                                     </div>
                                                 </div>
@@ -672,11 +668,9 @@
                                                         <div class="input-group date" id="exp_closing_div" data-target-input="nearest">
                                                             <t t-set='date_formatted'><t t-options='{"widget": "date"}' t-esc="opportunity.date_deadline"/></t>
                                                             <input type="text" name="date_deadline" data-target="#exp_closing_div" t-att-value="date_formatted" class="datetimepicker-input form-control date_deadline" t-att-name="prefix"/>
-                                                            <div class="input-group-append" data-target="#exp_closing_div" data-toggle="datetimepicker">
-                                                                <span class="input-group-text">
-                                                                    <span class="fa fa-calendar" role="img" aria-label="Calendar"></span>
-                                                                </span>
-                                                            </div>
+                                                            <span class="input-group-text" data-target="#exp_closing_div" data-toggle="datetimepicker">
+                                                                <span class="fa fa-calendar" role="img" aria-label="Calendar"></span>
+                                                            </span>
                                                         </div>
                                                     </div>
                                                 </div>
@@ -699,11 +693,9 @@
                                                         <div class="input-group date" id="next_activity_div" data-target-input="nearest">
                                                             <t t-set='date_formatted'><t t-options='{"widget": "date"}' t-esc="user_activity.date_deadline"/></t>
                                                             <input type="text" name="activity_date_deadline" data-target="#next_activity_div" t-att-value="date_formatted" class="form-control activity_date_deadline datetimepicker-input" t-att-name="prefix"/>
-                                                            <div class="input-group-append" data-target="#next_activity_div" data-toggle="datetimepicker">
-                                                                <span class="input-group-text">
-                                                                    <span class="fa fa-calendar" role="img" aria-label="Calendar" title="Calendar"></span>
-                                                                </span>
-                                                            </div>
+                                                            <span class="input-group-text" data-target="#next_activity_div" data-toggle="datetimepicker">
+                                                                <span class="fa fa-calendar" role="img" aria-label="Calendar" title="Calendar"></span>
+                                                            </span>
                                                         </div>
                                                     </div>
                                                 </div>
