--- a/addons/website_sale/static/src/scss/website_sale.scss
+++ b/addons/website_sale/static/src/scss/website_sale.scss
@@ -185,12 +185,14 @@ $o-wsale-products-layout-grid-gutter-width: min($grid-gutter-width / 2, $o-wsale
         color: gray('500');
         background-color: transparent;
         border-radius: 0%;
+    }
 
-        &.active, &:focus {
-            color: gray('600');
-            background-color: gray('200');
-            box-shadow: none !important;
-        }
+    .o_wsale_apply_layout > .btn-check:checked + .btn,
+    .o_wsale_apply_layout > .btn:focus
+    {
+        color: gray('600');
+        background-color: gray('200');
+        box-shadow: none !important;
     }
 }
 
