--- a/addons/web/static/src/legacy/scss/list_view.scss
+++ b/addons/web/static/src/legacy/scss/list_view.scss
@@ -346,6 +346,7 @@
     }
 
     .o_optional_columns_dropdown_toggle {
+        border-top: none;
         cursor: pointer;
         padding: 0 5px;
         text-align: center;
