--- a/addons/website_sale/views/templates.xml
+++ b/addons/website_sale/views/templates.xml
@@ -1880,8 +1880,8 @@
                       </td>
                   </tr>
                   <tr id="order_total">
-                      <td class="text-right"><strong>Total:</strong></td>
-                      <td class="text-xl-right">
+                      <td class="text-right border-top border-bottom-0"><strong>Total:</strong></td>
+                      <td class="text-xl-right border-top border-bottom-0">
                           <strong t-field="website_sale_order.amount_total" class="monetary_field"
                               t-options='{"widget": "monetary", "display_currency": website_sale_order.pricelist_id.currency_id}'/>
                       </td>
