--- a/addons/web/static/src/legacy/scss/bootstrap_overridden.scss
+++ b/addons/web/static/src/legacy/scss/bootstrap_overridden.scss
@@ -112,6 +112,7 @@ $headings-color: $o-main-headings-color !default;
 $table-accent-bg: rgba($black, .01) !default;
 $table-hover-bg: rgba($black, .04) !default;
 $table-border-color: $gray-200 !default;
+$table-group-separator-color: $gray-200 !default;
 
 // Buttons
 //
